// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaginationButton should render active button 1`] = `
<button
  className="mfui-pagination-button mfui-pagination-button_active mfui-pagination-button_theme_default"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  Click me
</button>
`;

exports[`PaginationButton should render component 1`] = `
<button
  className="mfui-pagination-button mfui-pagination-button_theme_default"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  Click me
</button>
`;

exports[`PaginationButton should render disabled button 1`] = `
<button
  className="mfui-pagination-button mfui-pagination-button_theme_default"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  Click me
</button>
`;

exports[`PaginationButton should render with optional props 1`] = `
<button
  className="mfui-pagination-button mfui-pagination-button_theme_light custom-class-name"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  Click me
</button>
`;
